2011-04-13  Thierry Reding  <thierry.reding@avionic-design.de>

Gtk+ port fails to build when enabling WebGL
        https://bugs.webkit.org/show_bug.cgi?id=58434

        Fix the GTK+ WebGL build after the introduction of PlatformContextCairo.

        * platform/graphics/GraphicsContext3D.h:
        * platform/graphics/cairo/GraphicsContext3DCairo.cpp:
        (WebCore::GraphicsContext3D::paintToCanvas):

Canonical link: https://commits.webkit.org/73502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83745 268f45cc-cd09-0410-ab3c-d52691b4dbfc